Fix spacing in header

--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ ul.links {
 .header {
   background: white;
   display: grid;
-  grid-template-columns: 3fr 250px;
+  grid-template-columns: 3fr 325px;
   align-items: center;
   padding: 10px 50px;
-  gap: 15px
+  gap: 15px;
 }
 
 .searchbar {
@@ -111,16 +111,17 @@ ul.links {
 
 .function-buttons {
   display: grid;
-  gap: 10px;
+  justify-content: space-between;
   grid-auto-flow: column;
+  grid-auto-columns: min-content;
 }
 .function-buttons button{
   background: rgb(138, 43, 226);
   color: white;
   border-radius: 20px;
   border: none;
-  width: 80px;
-  height: 30px
+  width: 90px;
+  height: 40px
 }
 .function-buttons button:hover {
   background: rgb(178, 96, 255);
